--- a/Module-1_bash-jupyter-git/1.3_jupyter-basics.ipynb
+++ b/Module-1_bash-jupyter-git/1.3_jupyter-basics.ipynb
@@ -21,6 +21,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3345347"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3345345"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,6 +52,24 @@
     "%%bash\n",
     "pwd\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/user/Desktop/Applied-Bioinformatics/Module-1_bash-jupyter-git\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "pwd"
    ]
   },
   {
@@ -54,6 +92,24 @@
     "%%bash\n",
     "ls data/art\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artists.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "ls data/art"
    ]
   },
   {
@@ -82,6 +138,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABBATI, Giuseppe\t(1836-1868)\tRealism\tItalian painter\n",
+      "ABBATINI, Guido Ubaldo\t(c. 1602-1656)\tBaroque\tItalian painter (Rome)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd data/art\n",
+    "grep -i abbati artists.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,6 +170,25 @@
     "cd /data/art\n",
     "grep -c Italian painters artists.txt\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd data/art\n",
+    "grep -c \"Italian painter\" artists.txt"
    ]
   },
   {
@@ -111,6 +208,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artists.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd data/art\n",
+    "ls -S"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,11 +234,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd data/art\n",
+    "grep -v French artists.txt | grep -c artist"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HW3: List only the csv files in `data/tmp`."
+    "## HW3: List only the csv files in `data/tmp`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file192.csv\n",
+      "file33.csv\n",
+      "file96.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd data/tmp\n",
+    "ls *.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -141,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
